# sorting_algorithms

./: .gitignore  0-bubble_sort.c  1-insertion_sort_list.c  2-selection_sort.c  3-quick_sort.c  CMakeLists.txt  README.md  sort.h
